# avito_cup_ml_2025

./: .gitignore  README.md  data.md  main.py  pyproject.toml  sum_calculator.py
.github/workflows/: ai-agent-coding.yaml
configs/: config.yaml
configs/reranker_models/: catboost.yaml
configs/retrieval_models/: als.yaml  popular.yaml
notebooks/: BPR_and_ALS_plus_catboost.ipynb  avito_baseline.ipynb  baseline.ipynb  eda.ipynb  old_baseline.ipynb  test.ipynb
scripts/: test.py  train.py
scripts/outputs/2025-05-21/16-39-21/.hydra/: config.yaml  hydra.yaml
scripts/outputs/2025-05-21/16-44-56/.hydra/: config.yaml  hydra.yaml
tests/: test_sum_calculator.py
tools/: experiment_tracker.py  preprocessing_data.py  retrievers.py  user_item_features.py
